<resources>
    <string name="InfoPopupText">Tangram\n
version 0.8.1 (2026.08.31)\n
by Trevin Beattie\n
\n
Documentation for this app can be found on its GitHub project page:
https://github.com/Typraeurion/Android-Tangram/releases\n
\n
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or (at
your option) any later version. This program is distributed in the
hope that it will be useful, but WITHOUT ANY WARRANTY; without even
the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
PURPOSE. See the GNU General Public License at
https://opensource.org/license/gpl-3.0 for more details.\n
\n
The tangram puzzles used in this app were obtained from publicly
available sources.  Generic tangrams are considered public domain
concepts that cannot be copyrighted.\n
</string>
    <string name="app_name">Tangram</string>
    <string name="BannerPuzzleSolved">Solved!</string>
    <string name="ButtonSave">Save Pattern</string>
    <array name="CornerButtonList">
        <item>None</item>
        <item>Exit</item>
        <item>Goal</item>
        <item>Save</item>
    </array>
    <string name="DifficultyDot1Tooltip">Novice</string>
    <string name="DifficultyDot2Tooltip">Apprentice</string>
    <string name="DifficultyDot3Tooltip">Competent</string>
    <string name="DifficultyDot4Tooltip">Skilled</string>
    <string name="DifficultyDot5Tooltip">Expert</string>
    <string name="DifficultyDot6Tooltip">Master</string>
    <string name="DifficultyDot7Tooltip">Grandmaster</string>
    <string name="ErrorBadUserArrayPuzzle">Entry at %s[%d] is not a valid Tangram puzzle: %s</string>
    <string name="ErrorBadUserPuzzle">%s is not a valid Tangram puzzle: %s</string>
    <string name="ErrorCannotCreateSaveFile">Unable to create the file "%s" to save the puzzle.</string>
    <string name="ErrorCannotReadUserFile">Could not read file %s: %s</string>
    <string name="ErrorCannotSave">Error Saving Puzzle</string>
    <string name="ErrorInvalidNamedPuzzle">Invalid puzzle: %1$s</string>
    <string name="ErrorInvalidUnnamedPuzzle">Invalid puzzle</string>
    <string name="ErrorUserDirNotSet">Folder for user puzzles has not been set; please set it in the preferences.</string>
    <string name="ErrorUserDirRevoked">Permission to use %s to save user puzzles is no longer available; please re-select it in the preferences.</string>
    <string name="ErrorWritingPuzzle">Could not save the puzzle in %s: %s</string>
    <string name="InfoButtonOK">OK</string>
    <string name="LibraryEmpty">No puzzles are available.</string>
    <string name="LibraryTitle">Puzzle Library</string>
    <string name="ListPuzzleAssetSource">Built-in %s collection</string>
    <string name="ListPuzzleUserSource">User-provided %s collection</string>
    <string name="ListPuzzleUserSourceFallback">User-provided file %s</string>
    <string name="MenuAbout">About&#8230;</string>
    <string name="MenuLibrary">Browse Library</string>
    <string name="MenuPreferences">Preferences</string>
    <string name="MenuRandom">Random Puzzle</string>
    <string name="MenuResume">Resume Puzzle In Progress</string>
    <string name="MenuSketch">Free-form</string>
    <string name="NotificationPuzzleSaved">Puzzle %s successfully saved to %s</string>
    <!-- Badge showing how many of a piece are left to place, e.g. "×2" -->
    <string name="piece_count_format">&#215;%d</string>
    <!-- Piece names, used for the tray slots' accessibility descriptions -->
    <string name="PieceNameLargeTriangle">Large Triangle</string>
    <string name="PieceNameMediumTriangle">Medium Triangle</string>
    <string name="PieceNameParallelogram">Parallelogram</string>
    <string name="PieceNameSmallTriangle">Small Triangle</string>
    <string name="PieceNameSquare">Square</string>
    <!-- Spoken description of a tray slot: name then count available -->
    <string name="piece_tray_item_description">%1$s, %2$d available</string>
    <string name="PlayButtonBackText">Exit</string>
    <string name="PlayButtonBackTooltip">Back to main menu</string>
    <string name="PlayButtonFlipText">Flip</string>
    <string name="PlayButtonFlipTooltip">Flip the selected piece over</string>
    <string name="PlayButtonSaveText">Save</string>
    <string name="PlayButtonSaveTooltip">Save the completed Tangram</string>
    <string name="PlayViewGoalText">Goal</string>
    <string name="PlayViewGoalTooltip">Puzzle goal</string>
    <string name="PrefsDialogUserDirTitle">Choose a folder for user puzzles</string>
    <string name="PrefsTextCornerBottomLeft">Bottom Left</string>
    <string name="PrefsTextCornerBottomRight">Bottom Right</string>
    <string name="PrefsTextCornerButtons">Corner Buttons: </string>
    <string name="PrefsTextCornerTopLeft">Top Left</string>
    <string name="PrefsTextCornerTopRight">Top Right</string>
    <string name="PrefsTextHintLevel">Hint Level: </string>
    <string name="PrefsTextHintNone">None</string>
    <string name="PrefsTextHintOutline">Outline</string>
    <string name="PrefsTextHintSolve">Solution</string>
    <string name="PrefsTextNoUserDir">(not set; click to choose a folder)</string>
    <string name="PrefsTextPieceTheme">Piece Coloring: </string>
    <string name="PrefsTextPieceThemeSolid">Monochrome</string>
    <string name="PrefsTextPieceThemeOutline">Outlined</string>
    <string name="PrefsTextPieceThemeMulticolor">Multi-colored</string>
    <string name="PrefsTextSaveFolder">Folder for User Puzzles: </string>
    <string name="PrefsTextThemeDark">Dark</string>
    <string name="PrefsTextThemeDefault">System Default</string>
    <string name="PrefsTextThemeLight">Light</string>
    <string name="PrefsTextUITheme">UI Theme: </string>
    <string name="SaveDialogButtonCancel">Cancel</string>
    <string name="SaveDialogButtonSave">Save</string>
    <string name="SaveDialogCollection">Collection: </string>
    <string name="SaveDialogCollectionHint">default</string>
    <string name="SaveDialogID">ID: </string>
    <string name="SaveDialogIDHint">default-my-shape</string>
    <string name="SaveDialogName">Puzzle Name: </string>
    <string name="SaveDialogNameHint">My Shape</string>
    <string name="SaveDialogTitle">Save Puzzle</string>
    <string name="SaveFolderPromptTitle">Save Your Puzzle?</string>
    <string name="SaveFolderPromptMessage">You have made a valid Tangram!\n
\n
To save puzzles you create, the app needs a folder to store them in.
 You haven&#8217;t chosen one yet or its permission is no longer available.\n
\n
Would you like to choose a folder now?  You can always change it later
under Preferences &#8594; Folder for User Puzzles.</string>
    <string name="SaveFolderPromptChoose">Choose Folder</string>
    <string name="SaveFolderPromptDismiss">Not Now</string>
    <string name="TitleTooltip">Tangram</string>
    <string name="UserPuzzleErrorsTitle">User Puzzle Errors</string>
    <string name="UserPuzzleFilePrefix">puzzles-</string>
    <string name="ValidTangram">Valid Tangram</string>
    <!-- Puzzle validation errors -->
    <string name="ValidationErrorDisconnect">%1$s are not touching %2$s</string>
    <plurals name="ValidationErrorExtraPiece">
        <item quantity="one">There is %1$d extra %2$s</item>
        <item quantity="other">There are %1$d extra %2$ss</item>
    </plurals>
    <plurals name="ValidationErrorMissingPiece">
        <item quantity="one">%1$d %2$s is missing</item>
        <item quantity="other">%1$d %2$ss are missing</item>
    </plurals>
    <string name="ValidationErrorNotTouching">%1$s does not touch any other pieces</string>
    <string name="ValidationErrorOverlap">%1$s overlaps %2$s</string>

</resources>
