<?xml version="1.0" encoding="utf-8"?>
<!-- This layout generated by Claude Code (Opus 4.8) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/piece_tray_padding"
        android:text="@string/LibraryTitle"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView android:id="@+id/LibraryPuzzleList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:divider="?android:attr/listDivider"
            android:dividerHeight="1dp"
            app:layout_constraintWidth_max="640dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView android:id="@+id/LibraryEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/piece_tray_padding"
            android:text="@string/LibraryEmpty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton android:id="@+id/LibraryButtonBack"
        android:layout_width="@dimen/hover_control_size"
        android:layout_height="@dimen/hover_control_size"
        android:layout_gravity="center"
        android:layout_margin="@dimen/hover_control_margin"
        android:background="@drawable/hover_button_background"
        android:contentDescription="@string/PlayButtonBackTooltip"
        android:elevation="4dp"
        android:padding="@dimen/hover_control_padding"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_back" />

</LinearLayout>